[package]
name = "staking"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
staking-io = { path = "io" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
