[package]
name = "staking"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
staking-io = { path = "io" }
ft-io = { git = "https://github.com/gear-dapps/fungible-token.git", tag = "0.1.3" }
scale-info = { version = "2.3.1", default-features = false }
hashbrown = "0.13.1"
gmeta = { git = "https://github.com/gear-tech/gear", features = ["codegen"] }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
gclient = { git = "https://github.com/gear-tech/gear.git" }
tokio = "1"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
staking-io = { path = "io" }

# [patch.crates-io]
# # Two dependecies below goes for subxt v0.22.0
# sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
# sp-runtime = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
